<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.drysdale@student.han.nl">Adam</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

<!-- <?xml version="1.0"?>
<package format="3">
  <name>robot_slam</name>
  <version>0.0.1</version>
  <description>Joystick to Arduino serial bridge for a 4-wheeled mecanum robot</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- External Python dep -->
  <exec_depend>pyserial</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> -->



